--- a/public/styles.css
+++ b/public/styles.css
@@ -169,6 +169,8 @@ pre code {
   font-weight: 600;
   font-stretch: condensed;
   letter-spacing: 2px;
+  font-size: larger;
+  padding-left: 0.2em;
 }
 
 .overlay {
