--- a/public/styles.css
+++ b/public/styles.css
@@ -42,8 +42,6 @@ body {
   color: rgba(255, 255, 255, 1);
   background-color: #03061c;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  display: flex;
-  justify-content: center;
   position: relative;
 }
 
@@ -69,20 +67,15 @@ p {
 
 a {
   color: #fa7832;
-  font-size: clamp(0.875rem, 1.5rem, 2.5rem);
   font-weight: 800;
   text-decoration: none;
   font-family: Helvetica, sans-serif;
-  text-shadow: 1px 2px 5px #03061c;
+  position: relative;
 }
 
 a:active,
 a:focus {
   color: #9cb4f7;
-}
-
-a:hover {
-  color: #ffffff;
 }
 
 /* A elements that don't have a class get default styles */
@@ -112,9 +105,15 @@ header {
   gap: clamp(1em, 1vw, 2em);
 }
 
-section {
-  height: 100dvh;
-  width: 100%;
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%
+}
+
+a > div {
+  flex-shrink: 1;
 }
 
 canvas {
@@ -150,6 +149,9 @@ pre code {
   position: relative;
   z-index: 1;
   text-align: center;
+  padding: 2em 2em 4em;
+}
+
 #back-to-top {
   position: fixed;
   bottom: 0;
@@ -225,27 +227,40 @@ pre code {
 
 .api {
   aspect-ratio: 1 / 1;
-  width: 80px;
-  background-color: #0b3d91;
+  width: 84px;
   border: 2px solid #fc3d21;
   border-radius: 50%;
-  position: absolute;
-  top: 1.25em;
-  right: 2em;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
+  color: #ffffff;
+  font-size: 1rem;
+  line-height: 1;
+  position: relative;
+}
+
+.api:hover {
+  filter: drop-shadow(0 4px 16px rgba(255, 255, 255, 0.5));
+}
+
+.api > svg {
+  position: absolute;
+  top: -5px;
+  left: -10px;
+  z-index: -1;
 }
 
 .api > p {
   color: #ffffff;
-  font-family: sans-serif, "Helvetica Neue", "Lucida Grande", Arial;
-  font-weight: 600;
-  font-stretch: condensed;
-  letter-spacing: 2px;
   font-size: larger;
+  padding-top: 0.5em;
   padding-left: 0.2em;
 }
+
+.api > h6 {
+  margin: 0;
+}
+
 .sample {
   padding: 0 !important;
 }
@@ -282,6 +297,14 @@ pre code {
   border-radius: 15px;
   padding: 20px 20px;
   box-shadow: 0 4px 30px rgba(255, 255, 255, 0.1);
+}
+
+.section-title {
+  max-width: 600px;
+  font-size: 2em;
+  text-align: left;
+  margin: 0 auto;
+  padding: 2em 0 1em;
 }
 
 #sample-vitals {
@@ -332,6 +355,17 @@ pre code {
   font-weight: 800;
   font-family: Helvetica, sans-serif;
 }
+
+.landing {
+  position: relative;
+  height: 100dvh;
+  width: 100%;
+}
+
+.title {
+  position: absolute;
+  top: 20%;
+  width: 100%;
 }
 
 .container {
