--- a/public/styles.css
+++ b/public/styles.css
@@ -312,8 +312,16 @@ pre code {
   padding: 2em 0 1em;
 }
 
+#sample {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+#sample > .section-title {
+  margin: 0;
+}
+
 #sample-vitals {
-  width: 100%;
   height: 100px;
   overflow: hidden;
   padding: 0;
@@ -348,6 +356,123 @@ pre code {
 }
 .card:not(:last-child) {
   border-right: thin solid silver;
+}
+#sample-stories {
+  margin: 1em auto 0;
+  padding: 0;
+}
+
+.story-cards {
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 3em;
+}
+
+.story-card {
+  padding-bottom: 1.5em;
+  box-shadow: 0 4px 30px rgba(255, 255, 255, 0.1);
+  background: rgba(0, 0, 0, 0.85);
+  border-radius: 15px;
+}
+
+.story-anchor {
+  height: 500px;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  aspect-ratio: 16 / 9;
+  display: flex;
+  align-items: flex-end;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.story-header {
+  width: 95%;
+  border-bottom: thin solid silver;
+  padding-bottom: 1.5em;
+  margin: 0 auto;
+}
+
+.story-header > h2 {
+  font-size: 1.125em;
+  text-align: left;
+  line-height: 1.05em;
+}
+
+.story-header > p {
+  font-size: 0.75em;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 200;
+  text-align: left;
+}
+
+.story-body {
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+  padding-top: 1em;
+  margin: 0 auto;
+  text-align: left;
+  backdrop-filter: blur(10px);
+}
+
+.story-content > p {
+  letter-spacing: 0.2em;
+  line-height: 1.65em;
+  font-weight: 100;
+  font-size: 0.9em;
+}
+
+.story-footer {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.5em;
+}
+
+.story-footer > i {
+  color: #b9b9bb;
+}
+
+.story-footer > p {
+  font-size: 0.75em;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 200;
+}
+
+.pagination {
+  width: fit-content;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
+
+.pagination:hover {
+  box-shadow: 0 4px 30px rgba(255, 255, 255, 0.35);
+}
+
+.story-buttons {
+  display: flex;
+  gap: 0.25em;
+}
+
+.button {
+  width: 1.75em;
+  height: 1.75em;
+  border: none;
+  font-size: larger;
+  color: #ffffff;
+  background-color: #fa7832;
+  border-radius: 6px;
+}
+
+.button:hover {
+  scale: 1.1;
 }
 
 .subtitle {
