Replacing emoji arrows in sample-vitals with font awesome arrows.

--- a/public/styles.css
+++ b/public/styles.css
@@ -481,8 +481,7 @@ pre code {
 
 .arrow {
   color: #fa7832;
-  font-weight: 800;
-  font-family: Helvetica, sans-serif;
+  font-size: larger;
 }
 
 .landing {
